# pynxm

./: .bumpversion.cfg  .gitignore  .travis.yml  README.rst  appveyor.yml  pynxm.py  pyproject.toml  test_pynxm.py  tox.ini
docs/: conf.py  index.rst
