[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pynxm"
author = "Daniel Nunes"
author-email = "daniel.henri.nunes@gmail.com"
home-page = "https://github.com/GandaG/pynexus"
description-file = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
requires = [
    "requests",
    "websocket-client",
]

[tool.flit.metadata.requires-extra]
dev = [
    "tox",
    "bump2version",
]
